Fixed bug with display of HorazontalDisplay overflow, as well as the Author Page styling fix

--- a/webapp/src/components/article/style.css
+++ b/webapp/src/components/article/style.css
@@ -4,13 +4,25 @@
     background-color: rgb(167, 230, 255) ;
     padding: 15px;
     width: 85em;
-    margin-left:"30px";
     display: flex;
-    margin-bottom: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+    box-shadow: 5px 5px rgb(202, 200, 200);
 }
+.cardImage{
+    border: 1px solid black;
+    border-radius: 5px;
+    height:150px;
+    width:auto;
+    object-fit: cover;
+    margin-right: 20px;
+    display: flex;
+    align-self: center;
+}
+
 .article {
-    height: 150px;
-    width: 250px;
+    height: auto;
+    width: 400px;
     border: 2px;
 }
 .cardImage{
