--- a/webapp/src/pages/pages.css
+++ b/webapp/src/pages/pages.css
@@ -1,22 +1,3 @@
-.homeCard{
-    border: 2px solid grey;
-    border-radius: 5px;
-    background-color: rgb(167, 230, 255) ;
-    padding: 15px;
-    width: '18rem';
-    margin-left:"30px";
-    display: flex;
-    margin-bottom: 15px;
-}
-
-.cardImage{
-    border: 1px solid black;
-    border-radius: 5px;
-    height:150px;
-    width:auto;
-    object-fit: cover;
-    margin-right: 20px;
-}
 
 .navUser{
     color:white;
@@ -43,17 +24,8 @@
     margin: 30px 0 0 30px;
 }
 
-.authorInfo{
-  margin-top: 40px;
-   
-}
 
-.homeStories{
-    margin-top: 20px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
+
 .homeWelcome{
     padding-top:50px;
     display: flex;  
